<resources>
    <string name="app_name">ChildAdventure</string>
    <string name="nounou">Childminder Dashboard</string>
    <string name="take_photo">Take photo</string>
    <string name="week">Week info</string>
    <string name="profiles">Profiles</string>
    <string name="gallery">Gallery</string>
    <string name="signout">signout</string>
    <string name="title_activity_week_info">WeekInfo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breakfast">Breakfast:</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="menu">Menu</string>
    <string name="snacks">Snacks:</string>
    <string name="lunch">Lunch:</string>
    <string name="dinner">Dinner:</string>
    <string name="week_subject">Activity of the week</string>
    <string name="day_activity">Activity of the name</string>
    <string name="monday_i">Monday</string>
    <string name="friday_i">Friday</string>
    <string name="thursday_i">Thursday</string>
    <string name="wednesday_i">Wednesday</string>
    <string name="tuesday_i">Tuesday</string>
    <string name="weekly_menu">Menu</string>
    <string name="child_name">Child name here</string>
    <string name="child_age">Child age here</string>
    <string name="dob">date of birth</string>
    <string name="family_member">Family member</string>
    <string name="address">Child address</string>
    <string name="languages">languages</string>
    <string name="allergies"> Allergies</string>
    <string name="relevant_info"> Relevant information</string>
    <string name="email">Email</string>
    <string name="child_details">Child Details</string>
    <string name="phone">Phone number</string>
    <string name="denied">Permission denied</string>
    <string name="saved_message">Image Saved at %1$s</string>
    <string name="path">picture_path</string>
    <string name="permission_denied">permission denied</string>
    <string name="add">Add description</string>
    <string name="childminderFolder">childminderPictures</string>
    <string name="childFolder">childFolder</string>
    <string name="child_list">Child List</string>
    <string name="shareListActivity">ShareListActivity</string>
    <string name="picture_details">Picture details</string>
    <string name="storageRef">storageRef</string>
    <string name="folderName">childminder_uploaded</string>
    <string name="childList">childlist</string>
    <string name="childDetails">child_details</string>
    <string name="key">key_child</string>
    <string name="profile_updated">Profile updated</string>
    <string name="user_name">User name</string>
    <string name="dialog_user_title">Assign parent</string>
    <string name="dialog_user_message">Write Parent\'s name and email</string>
    <string name="childminder_user">ChildminderUser</string>
    <string name="user_role">1</string>
    <string name="add_widget">Add widget</string>
    <string name="create_child_list_now">Create child list now</string>
    <string name="title_description">Description</string>
    <string name="pictures_folder">pictures_uploaded</string>

</resources>
