<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aleisamo.github.com.childadventure.ChildMinderDashboard">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/childminder_dashboard"
        android:layout_width="match_parent"
        android:layout_height="66dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_profile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nounou"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/take_photo"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:onClick="sendTo"
                android:text="@string/take_photo" />

            <Button
                android:id="@+id/week_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/week" />

            <Button
                android:id="@+id/profiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profiles" />

            <Button
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gallery" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_out"
            android:layout_alignParentBottom="true"
            android:text="@string/signout"
            android:layout_width="114dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
