<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/week_subject"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="50dp"
        app:cardCornerRadius="5dp">
        <EditText
            android:id="@+id/week_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Write here main topic of the week "/>
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/day_activity"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday_i"/>
            <EditText
                android:id="@+id/day_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Write here  daily topic"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday_i"/>
            <EditText
                android:id="@+id/tuesday_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Write here  daily topic"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday_i"/>
            <EditText
                android:id="@+id/wednesday_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Write here  daily topic"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday_i"/>
            <EditText
                android:id="@+id/thursday_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Write here  daily topic"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday_i"/>
            <EditText
                android:id="@+id/friday_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Write here  daily topic"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    </ScrollView>
</LinearLayout>