<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="aleisamo.github.com.childadventure.WeeklyMenu">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:elevation="2dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:layout_gravity="center"
            android:background="@drawable/avatar"
            android:backgroundTint="@color/colorPrimary" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"/>
        <EditText
            android:id="@+id/breakfast_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snacks"/>
        <EditText
            android:id="@+id/snacks_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch"/>
        <EditText
            android:id="@+id/lunch_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner"/>
        <EditText
            android:id="@+id/dinner_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src = "@drawable/ic_save"
        android:layout_margin="20dp" />

</LinearLayout>
