<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/details_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorAccent"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/allow_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                app:backgroundTint="@color/colorAccent"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/ic_assignment" />
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="match_parent"
                android:layout_marginTop="45dp"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:src="@drawable/ic_face"
                app:layout_collapseMode="parallax" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_marginTop="140dp"
        app:layout_collapseMode="pin"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/childName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/child_name" />

                    <EditText
                        android:id="@+id/childAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/child_age" />

                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dob" />

                    <EditText
                        android:id="@+id/child_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorAccent" />

                    <EditText
                        android:id="@+id/family_member1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/family_member" />

                    <EditText
                        android:id="@+id/email1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />

                    <EditText
                        android:id="@+id/phone1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone" />


                    <EditText
                        android:id="@+id/address1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address" />

                    <EditText
                        android:id="@+id/family_member2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/family_member" />

                    <EditText
                        android:id="@+id/email2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />

                    <EditText
                        android:id="@+id/phone2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone" />

                    <EditText
                        android:id="@+id/address2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorAccent" />

                    <EditText
                        android:id="@+id/languages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/languages" />

                    <EditText
                        android:id="@+id/allergies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/allergies" />

                    <EditText
                        android:id="@+id/relevant_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/relevant_info" />
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>


