<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aleisamo.github.com.childadventure.WeekInfo">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit"
        android:name="@+name/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="@dimen/fab_margin"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:name="@+name/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"/>

    <FrameLayout
        android:id="@+id/week_activity_fragment"
        android:name="@+name/week_activity_fragment"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_marginTop="60dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_marginBottom="60dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/monday"
                android:name="@+name/monday"
                android:layout_width="56dp"
                android:layout_marginLeft="20dp"
                android:paddingTop="16dp"
                android:layout_gravity="center"
                android:layout_height="56dp"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/avatar"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:text="@string/monday" />

            <TextView
                android:id="@+id/tuesday"
                android:name="@+name/tuesday"
                android:layout_width="56dp"
                android:layout_margin="16dp"
                android:paddingTop="16dp"
                android:layout_gravity="center"
                android:layout_height="56dp"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/avatar"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:text="@string/tuesday" />

            <TextView
                android:id="@+id/wednesday"
                android:name="@+name/wednesday"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/avatar"
                android:paddingTop="16dp"
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/thursday"
                android:name="@+name/thursday"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/avatar"
                android:paddingTop="16dp"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:text="@string/thursday" />

            <TextView
                android:id="@+id/friday"
                android:name="@+name/friday"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/avatar"
                android:paddingTop="16dp"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:text="@string/friday" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
